# aqua-platform-desktop

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/: prompt.md
include/aqua/platform/desktop/: desktop_platform.hpp  desktop_window.hpp
src/: desktop_platform.cpp  desktop_window.cpp
